--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Home | hiringsaathi — HR Consulting, Workshops & Advisory</title>
   <meta name="description" content="hiringsaathi delivers strategic HR consulting, hands-on workshops, and scalable people solutions for growing businesses in India and beyond." />
   <link rel="canonical" href="https://hiringsaathi.odoo.com/" />
+  <link rel="stylesheet" href="style.css" />
+
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
