--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="hiringsaathi delivers strategic HR consulting, hands-on workshops, and scalable people solutions for growing businesses in India and beyond." />
   <link rel="canonical" href="https://hiringsaathi.odoo.com/" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+
 
 
   <!-- Open Graph -->
