--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Hero Section -->
   <section class="hero py-5 text-center">
     <div class="container">
-      <img src="assets/images/hero-team.jpg" alt="HR Consulting Team" class="img-fluid rounded-2xl shadow-soft mb-4">
+      <img src="hero-team-meeting.jpg" alt="HR Consulting Team" class="img-fluid rounded-2xl shadow-soft mb-4">
       <h1 class="fw-bold">Transforming Workplaces with Smarter HR Solutions</h1>
       <p class="lead text-muted">We bridge the gap between talent and opportunity.</p>
       <a href="#services" class="btn btn-brand px-4 py-2 mt-3">Explore Services</a>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-4">
           <div class="p-4 shadow-soft rounded-2xl h-100">
-            <img src="assets/images/recruitment.jpg" class="img-fluid rounded-2xl mb-3" alt="Recruitment">
+            <img src="workshop-room.jpg" class="img-fluid rounded-2xl mb-3" alt="Recruitment">
             <h5>Recruitment</h5>
             <p>Connecting top talent with leading companies for long-term success.</p>
           </div>
@@ -118,7 +118,7 @@
       </h2>
       <div class="row g-4 gallery">
         <div class="col-md-4">
-          <img src="assets/images/gallery1.jpg" class="img-fluid rounded-2xl shadow-soft" alt="Team Collaboration">
+          <img src="team-collaboration.jpg" class="img-fluid rounded-2xl shadow-soft" alt="Team Collaboration">
         </div>
         <div class="col-md-4">
           <img src="assets/images/gallery2.jpg" class="img-fluid rounded-2xl shadow-soft" alt="Workshop Training">
