--- a/index.html
+++ b/index.html
@@ -140,9 +140,47 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-4 text-center bg-light">
-    <p class="mb-0">&copy; 2025 HiriingSaathi. All rights reserved.</p>
-  </footer>
+ <footer class="footer bg-slate text-white py-10">
+  <div class="container grid grid-cols-1 md:grid-cols-3 gap-8 px-6">
+    
+    <!-- Logo + About -->
+    <div>
+      <img src="assets/images/logo.png" alt="HiringSaathi" class="logo-img mb-4">
+      <p class="text-sm opacity-80">
+        HiringSaathi helps you simplify hiring, manage candidates, 
+        and build your dream team with smart AI-powered tools.
+      </p>
+    </div>
+    
+    <!-- Quick Links -->
+    <div>
+      <h4 class="footer-title">Quick Links</h4>
+      <ul class="footer-links">
+        <li><a href="#features">Features</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <h4 class="footer-title">Get in Touch</h4>
+      <p>Email: <a href="mailto:support@hiringsaathi.com">support@hiringsaathi.com</a></p>
+      <p>Phone: +91 98765 43210</p>
+      <div class="social-links flex gap-4 mt-3">
+        <a href="#"><i class="fab fa-linkedin text-xl"></i></a>
+        <a href="#"><i class="fab fa-twitter text-xl"></i></a>
+        <a href="#"><i class="fab fa-facebook text-xl"></i></a>
+      </div>
+    </div>
+
+  </div>
+  <div class="text-center text-sm mt-8 opacity-70">
+    © 2025 HiringSaathi. All Rights Reserved.
+  </div>
+</footer>
+
 
 </body>
 </html>
